# GMTK2025

./: :w  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json  game  main.cpp  my_program
.cache/clangd/index/: Alien.cpp.513CB4F83DA12326.idx  Alien.hpp.A6B5B47CCC6D667B.idx  AnchorPoint.cpp.6259D2C6861B2EE3.idx  AnchorPoint.hpp.D7B8CB22C6FD02AE.idx  GameOverState.cpp.BA6F06C501E1A8C1.idx  GameOverState.hpp.CA333E171B716686.idx  GameState.hpp.2F25652779412A97.idx  MenuState.cpp.BE5931BF01CBA6F8.idx  MenuState.hpp.E5D491AA9EB79884.idx  PlayState.cpp.6834C9F064FEB24A.idx  PlayState.hpp.3CA589CA8E2C7089.idx  Player.cpp.FB471B53DDECAE69.idx  Player.hpp.3D926D235D121853.idx  StateManager.cpp.4DA63911C48B95B2.idx  StateManager.hpp.70A7F7A411C4FD37.idx  Utils.cpp.594E9C9C9D95B157.idx  Utils.hpp.9B6E7FDDAD00A0F6.idx  main.cpp.31526B9293A08C38.idx
include/: Alien.hpp  AnchorPoint.hpp  GameOverState.hpp  GameState.hpp  MenuState.hpp  PlayState.hpp  Player.hpp  StateManager.hpp  Utils.hpp
src/: Alien.cpp  AnchorPoint.cpp  GameOverState.cpp  MenuState.cpp  PlayState.cpp  Player.cpp  StateManager.cpp  Utils.cpp
